tests/errors/module_nonrec/module_nonrec.c
#error module_nonrec.module_nonrec:1:1 PARSE ERROR: Module header requires 'rec'. Hint: `module rec ProjectName.ModuleName`. (1:1)
